Tweak tracing.